# baltazar

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  baltazar
benchmark/: CMakeLists.txt  benchmark_example.cpp
examples/: CMakeLists.txt  example.cpp  parallel.cpp  profiling.cpp  simple.cpp
include/: baltazar.hpp  baltazar_core.hpp
include/baltazar/: dag.hpp  parallel.hpp  serial.hpp  thread_pool.hpp
scripts/: analyze_clang_tidy_log.py  baltazar_controller.py  baltazar_update_targets.py  build_debug.sh  build_release.sh  configure_debug.sh  configure_release.sh  process_profiling_logs.py  run_all_tests.py  run_all_tests.sh  run_clang_tidy.sh
src/: CMakeLists.txt
src/core/: CMakeLists.txt  core.cpp  core.h  core.hpp  core_parallel.hpp  core_serial.hpp  multithreaded_profiling.hpp  profiling.hpp
src/core/benchmark/: CMakeLists.txt  core_benchmark.cpp  node_map.txt
src/core/test/: CMakeLists.txt  core_test.cpp
src/dag/: CMakeLists.txt  dag.cpp  dag.h  dag.hpp
src/dag/test/: CMakeLists.txt  dag_test.cpp
src/thread_pool/: CMakeLists.txt  thread_pool.cpp  thread_pool.h  thread_pool.hpp  thread_profiling.hpp  thread_task.h  thread_task.hpp  thread_task_queue.h  thread_task_queue.hpp
src/thread_pool/benchmark/: CMakeLists.txt  benchmark.cpp  thread_pool_benchmark.cpp
src/thread_pool/test/: CMakeLists.txt  thread_pool_test.cpp
src/utils/: CMakeLists.txt  function_traits.hpp  optional.hpp
src/utils/test/: CMakeLists.txt  function_traits_test.cpp  optional_test.cpp
test/: CMakeLists.txt  test_example.cpp
